--- a/css/scss/_projects.scss
+++ b/css/scss/_projects.scss
@@ -36,6 +36,7 @@
     //padding: 0 0px 30px 0px;
     border-radius: 5px;
     overflow: hidden;
+    flex-wrap: wrap;
 
     .slick-list {
         //padding: 14px 0 10px;
