--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -13,14 +13,12 @@
 @import 'forms';
 @import 'footer';
 // @import 'campaigns';
-// @import 'content';
+ @import 'content';
 // @import 'gallery';
 // @import 'news';
 // @import 'basket';
 // @import 'popup';
 // @import 'services';
-
-
 
 //@import 'animate';
 
