--- a/template_styles.css
+++ b/template_styles.css
@@ -262,9 +262,6 @@ h6, .h6 {
   color: #fff;
   background: #619F49;
   border-radius: 5px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .button:hover {
@@ -302,9 +299,6 @@ h6, .h6 {
   width: 40px;
   height: 10px;
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: url(images/arrow.svg) no-repeat right center;
 }
@@ -344,9 +338,6 @@ h6, .h6 {
   outline: none;
   cursor: pointer;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .slick-arrow:before {
@@ -398,9 +389,6 @@ ul.slick-dots li {
   color: #212121;
   text-align: center;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 ul.slick-dots li:hover, ul.slick-dots li.slick-active {
@@ -444,15 +432,6 @@ ul.slick-dots li button {
 #promotion_announcement p {
   margin-bottom: 0;
 }
-
-@-webkit-keyframes marquee {
-  0% {
-    -webkit-transform: translate(100%, 0);
-  }
-  100% {
-    -webkit-transform: translate(-100%, 0);
-  }
-}
 @keyframes marquee {
   0% {
     transform: translate(100%, 0);
@@ -483,14 +462,6 @@ ul.slick-dots li button {
     white-space: nowrap;
   }
 }
-@-webkit-keyframes marquee60 {
-  0% {
-    -webkit-transform: translate(60%, 0);
-  }
-  100% {
-    -webkit-transform: translate(-100%, 0);
-  }
-}
 @keyframes marquee60 {
   0% {
     transform: translate(60%, 0);
@@ -502,14 +473,6 @@ ul.slick-dots li button {
 @media screen and (max-width: 800px) {
   #promotion_announcement .page_width p {
     animation: marquee60 20s infinite linear;
-  }
-}
-@-webkit-keyframes marquee40 {
-  0% {
-    -webkit-transform: translate(40%, 0);
-  }
-  100% {
-    -webkit-transform: translate(-100%, 0);
   }
 }
 @keyframes marquee40 {
@@ -622,9 +585,6 @@ ul.slick-dots li button {
   bottom: -3px;
   left: 50%;
   width: 0%;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .secondary_menu ul li.active a, .secondary_menu ul a:hover {
@@ -721,9 +681,6 @@ ul.slick-dots li button {
   height: 0;
   overflow: hidden;
   opacity: 0;
-  -webkit-transition: opacity 0.3s ease 0s;
-  -moz-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
 }
 
@@ -756,9 +713,6 @@ ul.slick-dots li button {
   vertical-align: middle;
   display: inline-block;
   border-bottom: 2px solid transparent;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .tab_buttons span:last-child, .tab_buttons a:last-child {
@@ -780,9 +734,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   top: 0;
   left: 0;
   z-index: 3;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 #header .page_width {
@@ -800,9 +751,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   float: left;
 }
 #logo a {
-  -webkit-transition: opacity 0.3s ease 0s;
-  -moz-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
 }
 #logo a:hover {
@@ -892,9 +840,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   height: 100%;
   top: 0;
   left: 0;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   overflow: hidden;
 }
@@ -913,7 +858,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   z-index: 2;
   color: #fff;
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   display: inline-block;
 }
@@ -1042,9 +988,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   vertical-align: top;
   box-sizing: border-box;
   text-align: center;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .advantages_container .item .icon {
@@ -1108,9 +1051,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   box-sizing: border-box;
   text-align: center;
   z-index: 1;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item:first-child {
@@ -1134,9 +1074,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   width: 100%;
   top: 0;
   left: 0;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: radial-gradient(73.8% 73.8% at 50% 33.8%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.539) 100%);
 }
@@ -1147,9 +1084,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 .directions_container .item .name {
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   top: 0;
   pointer-events: none;
@@ -1165,9 +1099,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   height: 500px;
   padding: 60px 8% 60px 8%;
   text-align: left;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu h4 {
@@ -1180,9 +1111,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   display: inline-block;
   position: relative;
   padding-left: 20px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu ul a::before {
@@ -1195,9 +1123,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   box-sizing: border-box;
   border-radius: 50%;
   border: 1px solid #619F49;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu ul a::after {
@@ -1208,9 +1133,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   width: 40px;
   height: 10px;
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: url(images/arrow.svg) no-repeat right center;
 }
@@ -1376,9 +1298,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   vertical-align: top;
   box-sizing: border-box;
   overflow: hidden;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item a {
@@ -1394,9 +1313,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   top: 0;
   left: 0;
   background: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item img {
@@ -1412,9 +1328,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   max-width: 270px;
   color: #fff;
   font-weight: 500;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item .more {
@@ -1424,9 +1337,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   font-weight: 500;
   color: #fff;
   letter-spacing: 0.03em;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item .more::after {
@@ -1478,11 +1388,7 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   margin: 0 20px 10px;
   line-height: 90px;
   text-align: center;
-  -webkit-filter: grayscale(1);
   filter: grayscale(1);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .partners_slider .item img {
@@ -1493,7 +1399,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   object-fit: contain;
 }
 .partners_slider .item:hover {
-  -webkit-filter: grayscale(0);
   filter: grayscale(0);
 }
 
@@ -1542,7 +1447,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 #main_form .form_block form {
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   max-width: 830px;
   margin: 0 auto;
@@ -1651,9 +1557,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   padding-left: 25px;
   display: inline-block;
   text-align: left;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .form_block input[type=checkbox]:not(checked) + label:before {
@@ -1675,9 +1578,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   position: absolute;
   left: 2px;
   top: 3px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   opacity: 0;
   border-left: 2px solid #212121;
@@ -1717,9 +1617,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   color: #fff;
   cursor: pointer;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   border: 0;
   border-radius: 5px;
@@ -2054,5 +1951,109 @@ footer #dev {
 }
 
 /* end footer styles */
+.breadcrumbs {
+  margin: 30px 0 60px;
+}
+.breadcrumbs li {
+  display: inline-block;
+}
+.breadcrumbs li a {
+  color: #212121;
+  font-weight: 400;
+}
+.breadcrumbs li a::after {
+  content: "/";
+  margin-left: 4px;
+}
+.breadcrumbs .active {
+  opacity: 40%;
+}
 
-/*# sourceMappingURL=template_styles.css.map */
+.directions {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 60px;
+}
+.directions .item {
+  margin: 0 15px 40px;
+  width: calc(25% - 30px);
+}
+.directions .item .img {
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.directions .item .img a {
+  position: relative;
+  width: 100%;
+  height: 420px;
+  border-radius: 5px;
+  display: block;
+}
+.directions .item .img a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  background-image: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%), url(zakladanie-ogrodow-Gliwice-Slask-4.jpg);
+  transition: all 0.3s ease 0s;
+}
+.directions .item .img a img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  opacity: 100%;
+}
+.directions .item .img a .more {
+  position: absolute;
+  left: 50%;
+  margin-left: -70px;
+  bottom: -30px;
+  color: #FFF;
+  transition: all 0.3s ease 0s;
+}
+.directions .item .img a .more:after {
+  content: "";
+  display: inline-block;
+  margin-left: 10px;
+  font-size: 21px;
+  width: 40px;
+  height: 10px;
+  position: relative;
+  filter: brightness(0.5) contrast(300%) invert(1);
+  background: url(images/arrow.svg) no-repeat right center;
+}
+.directions .item .img a:hover::before {
+  opacity: 100%;
+}
+.directions .item .img a:hover .more {
+  bottom: 60px;
+}
+.directions .item .text {
+  background-color: #FFF;
+}
+.directions .item .text p {
+  margin-top: 20px;
+  padding: 0 20px;
+  text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .directions .item {
+    width: calc( 33% - 30px);
+  }
+}
+@media screen and (max-width: 900px) {
+  .directions .item {
+    width: calc( 50% - 30px);
+  }
+}
+@media screen and (max-width: 600px) {
+  .directions .item {
+    width: 100%;
+    margin: 0 0px 40px;
+  }
+}
