--- a/css/scss/_advantages.scss
+++ b/css/scss/_advantages.scss
@@ -1,6 +1,7 @@
 /* start advantages styles */ 
 
 #advantages {
+    background: #F8F8F8;
     .page_width {
         padding-top: 105px;
         padding-bottom: 50px;
