--- a/css/scss/_base.scss
+++ b/css/scss/_base.scss
@@ -52,8 +52,8 @@ body {
     width: 100%;
     min-height: 100%;
     
-	//background:  url(images/site.jpg) no-repeat center top;
-	//background-size: auto;
+	background:  url(images/site.jpg) no-repeat center top;
+	//background-size: 1920px auto;
 }
 
 #page404 {
