--- a/template_styles.css
+++ b/template_styles.css
@@ -83,6 +83,7 @@ body {
   position: relative;
   width: 100%;
   min-height: 100%;
+  background: url(images/site.jpg) no-repeat center top;
 }
 
 #page404 .wrapper {
@@ -1018,6 +1019,9 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 /* end main screen styles */
 /* start advantages styles */
+#advantages {
+  background: #F8F8F8;
+}
 #advantages .page_width {
   padding-top: 105px;
   padding-bottom: 50px;
@@ -1328,6 +1332,78 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 .important_numbers .item p {
   position: relative;
+}
+
+#about_page_main {
+  padding-top: 130px;
+  background: no-repeat center/cover;
+}
+#about_page_main .page_width {
+  padding-bottom: 64px;
+}
+#about_page_main .text {
+  margin-top: 60px;
+  max-width: 880px;
+  box-sizing: border-box;
+  position: relative;
+  padding: 60px 60px;
+  z-index: 2;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(10px);
+  border-radius: 5px;
+  display: inline-block;
+}
+#about_page_main .h1 {
+  margin-bottom: 15px;
+}
+#about_page_main p {
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 40px;
+}
+
+#about_page_main + #about_section .page_width {
+  padding-top: 67px;
+  padding-bottom: 55px;
+}
+#about_page_main + #about_section .page_width::before {
+  top: 25px;
+}
+
+.grey_bg .page_width {
+  padding-top: 100px;
+  padding-bottom: 40px;
+}
+
+.text_and_image {
+  display: flex;
+  align-items: center;
+  padding-bottom: 65px;
+  padding-top: 3px;
+  margin-bottom: 35px;
+}
+.text_and_image .image {
+  width: 40.5%;
+  min-width: 40.5%;
+  margin: 0 30px 0px 0;
+  position: relative;
+}
+.text_and_image .image::before {
+  content: "";
+  position: absolute;
+  width: 209px;
+  height: 209px;
+  bottom: -55px;
+  left: -60px;
+  background: repeating-linear-gradient(-45deg, #77CA00, #77CA00 4px, transparent 0px, transparent 18px);
+}
+.text_and_image .image img {
+  max-width: 100%;
+  vertical-align: auto;
+}
+.text_and_image .text .button {
+  margin-top: 50px;
 }
 
 /* end about styles */
