--- a/css/scss/content.scss
+++ b/css/scss/content.scss
@@ -120,3 +120,18 @@
     }
 }
 //End Direction//
+
+//Start Direction_Ditails//
+    .middle{
+        text-align: center;
+        margin-top: 60px;
+    }
+
+    .gallery{
+        margin-top: 100px;
+    }
+
+    .other_directions{
+        margin-top: 100px;
+    }
+//End Direction_Ditails//
