--- a/template_styles.css
+++ b/template_styles.css
@@ -263,9 +263,6 @@ h6, .h6 {
   color: #fff;
   background: #619F49;
   border-radius: 5px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .button:hover {
@@ -303,9 +300,6 @@ h6, .h6 {
   width: 40px;
   height: 10px;
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: url(images/arrow.svg) no-repeat right center;
 }
@@ -345,9 +339,6 @@ h6, .h6 {
   outline: none;
   cursor: pointer;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .slick-arrow:before {
@@ -399,9 +390,6 @@ ul.slick-dots li {
   color: #212121;
   text-align: center;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 ul.slick-dots li:hover, ul.slick-dots li.slick-active {
@@ -445,15 +433,6 @@ ul.slick-dots li button {
 #promotion_announcement p {
   margin-bottom: 0;
 }
-
-@-webkit-keyframes marquee {
-  0% {
-    -webkit-transform: translate(100%, 0);
-  }
-  100% {
-    -webkit-transform: translate(-100%, 0);
-  }
-}
 @keyframes marquee {
   0% {
     transform: translate(100%, 0);
@@ -484,14 +463,6 @@ ul.slick-dots li button {
     white-space: nowrap;
   }
 }
-@-webkit-keyframes marquee60 {
-  0% {
-    -webkit-transform: translate(60%, 0);
-  }
-  100% {
-    -webkit-transform: translate(-100%, 0);
-  }
-}
 @keyframes marquee60 {
   0% {
     transform: translate(60%, 0);
@@ -503,14 +474,6 @@ ul.slick-dots li button {
 @media screen and (max-width: 800px) {
   #promotion_announcement .page_width p {
     animation: marquee60 20s infinite linear;
-  }
-}
-@-webkit-keyframes marquee40 {
-  0% {
-    -webkit-transform: translate(40%, 0);
-  }
-  100% {
-    -webkit-transform: translate(-100%, 0);
   }
 }
 @keyframes marquee40 {
@@ -539,15 +502,18 @@ ul.slick-dots li button {
   margin-left: 4px;
   overflow: hidden;
 }
-.text ul li:before {
+.text ul li p {
+  position: relative;
+  z-index: 1;
+}
+.text ul li::before {
   content: "";
-  width: 20px;
-  height: 10px;
-  background-image: url(images/icon_li.svg);
-  background-repeat: no-repeat;
   position: absolute;
-  left: 0;
-  top: 6px;
+  width: 20px;
+  height: 20px;
+  top: 0px;
+  left: 20px;
+  background: repeating-linear-gradient(-45deg, #FFF500, #FFF500 1px, transparent 1px, transparent 3px);
 }
 .text ol {
   counter-reset: ol_ounter;
@@ -623,9 +589,6 @@ ul.slick-dots li button {
   bottom: -3px;
   left: 50%;
   width: 0%;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .secondary_menu ul li.active a, .secondary_menu ul a:hover {
@@ -722,9 +685,6 @@ ul.slick-dots li button {
   height: 0;
   overflow: hidden;
   opacity: 0;
-  -webkit-transition: opacity 0.3s ease 0s;
-  -moz-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
 }
 
@@ -757,9 +717,6 @@ ul.slick-dots li button {
   vertical-align: middle;
   display: inline-block;
   border-bottom: 2px solid transparent;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .tab_buttons span:last-child, .tab_buttons a:last-child {
@@ -781,9 +738,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   top: 0;
   left: 0;
   z-index: 3;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 #header .page_width {
@@ -801,9 +755,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   float: left;
 }
 #logo a {
-  -webkit-transition: opacity 0.3s ease 0s;
-  -moz-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
 }
 #logo a:hover {
@@ -893,9 +844,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   height: 100%;
   top: 0;
   left: 0;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   overflow: hidden;
 }
@@ -914,7 +862,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   z-index: 2;
   color: #fff;
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   display: inline-block;
 }
@@ -1046,9 +995,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   vertical-align: top;
   box-sizing: border-box;
   text-align: center;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .advantages_container .item .icon {
@@ -1112,9 +1058,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   box-sizing: border-box;
   text-align: center;
   z-index: 1;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item:first-child {
@@ -1138,9 +1081,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   width: 100%;
   top: 0;
   left: 0;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: radial-gradient(73.8% 73.8% at 50% 33.8%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.539) 100%);
 }
@@ -1151,9 +1091,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 .directions_container .item .name {
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   top: 0;
   pointer-events: none;
@@ -1169,9 +1106,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   height: 500px;
   padding: 60px 8% 60px 8%;
   text-align: left;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu h4 {
@@ -1184,9 +1118,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   display: inline-block;
   position: relative;
   padding-left: 20px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu ul a::before {
@@ -1199,9 +1130,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   box-sizing: border-box;
   border-radius: 50%;
   border: 1px solid #619F49;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu ul a::after {
@@ -1212,9 +1140,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   width: 40px;
   height: 10px;
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: url(images/arrow.svg) no-repeat right center;
 }
@@ -1350,7 +1275,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   z-index: 2;
   color: #fff;
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   display: inline-block;
 }
@@ -1455,9 +1381,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   vertical-align: top;
   box-sizing: border-box;
   overflow: hidden;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item a {
@@ -1473,9 +1396,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   top: 0;
   left: 0;
   background: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item img {
@@ -1491,9 +1411,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   max-width: 270px;
   color: #fff;
   font-weight: 500;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item .more {
@@ -1503,9 +1420,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   font-weight: 500;
   color: #fff;
   letter-spacing: 0.03em;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item .more::after {
@@ -1557,11 +1471,7 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   margin: 0 20px 10px;
   line-height: 90px;
   text-align: center;
-  -webkit-filter: grayscale(1);
   filter: grayscale(1);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .partners_slider .item img {
@@ -1572,7 +1482,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   object-fit: contain;
 }
 .partners_slider .item:hover {
-  -webkit-filter: grayscale(0);
   filter: grayscale(0);
 }
 
@@ -1621,7 +1530,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 #main_form .form_block form {
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   max-width: 830px;
   margin: 0 auto;
@@ -1730,9 +1640,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   padding-left: 25px;
   display: inline-block;
   text-align: left;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .form_block input[type=checkbox]:not(checked) + label:before {
@@ -1754,9 +1661,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   position: absolute;
   left: 2px;
   top: 3px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   opacity: 0;
   border-left: 2px solid #212121;
@@ -1796,9 +1700,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   color: #fff;
   cursor: pointer;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   border: 0;
   border-radius: 5px;
@@ -2181,9 +2082,6 @@ footer #dev {
   right: 0;
   opacity: 0;
   background-image: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%), url(zakladanie-ogrodow-Gliwice-Slask-4.jpg);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions .item .img a img {
@@ -2198,9 +2096,6 @@ footer #dev {
   margin-left: -70px;
   bottom: -30px;
   color: #FFF;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions .item .img a .more:after {
@@ -2245,5 +2140,15 @@ footer #dev {
     margin: 0 0px 40px;
   }
 }
+.middle {
+  text-align: center;
+  margin-top: 60px;
+}
 
-/*# sourceMappingURL=template_styles.css.map */
+.gallery {
+  margin-top: 100px;
+}
+
+.other_directions {
+  margin-top: 100px;
+}
