--- a/css/scss/_projects.scss
+++ b/css/scss/_projects.scss
@@ -25,10 +25,8 @@
         }
     }
 }
-
 .projects_container {
-    //margin: 0 0px 3;
-    margin-bottom: 60px;
+    margin: 0 -1px 60px;
     overflow: hidden;
     clear: both;
     display: flex;
@@ -47,7 +45,7 @@
         position: relative;
         //padding: 0px 0px 10px 0px;
         //margin: 0px 0px 30px;
-        width: 33.33%;
+        width: 33.333%;
         height: 400px;
         display: inline-block;
         vertical-align: top;
@@ -128,6 +126,173 @@
     }
 
 }
+.project_page {
+    &:after {
+		@include clear();
+    }
+}
+.project_images {
+    float: left;
+    width: 49%;
+    margin: 0 0 14px;
+    padding: 0;
+
+.main_slider {
+    margin: 0 0 20px;
+    padding: 0;
+    overflow: hidden;
+    border-radius: 5px;
+
+    .slick-list {
+        margin: 0;
+    }
+
+    .slick-arrow {
+        height: 100%;
+        top: 0;
+        background: rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(3px);
+        width: 69px;
+
+        &::before {
+            top: 50%;
+            margin-top: -8px;
+            border-color: #fff;
+        }
+    }
+
+    .slick-prev {
+        left: 0;
+        margin-left: 0;
+
+        &::before {
+            left: 26px;
+        }
+    }
+    .slick-next {
+        right: 0;
+        margin-right: 0;
+        &::before {
+            right: 26px;
+        }
+    }
+
+    .item {
+        height: 470px;
+
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        &.video {
+            &::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: url(images/icon_play.svg) no-repeat center / 130px 130px;
+            }
+        }
+    }
+}
+
+.preview_slider {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+    .item {
+        position: relative;
+        overflow: hidden;
+        border-radius: 5px;
+        margin: 0 10px;
+        height: 110px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        &.video {
+            &::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: url(images/icon_play.svg) no-repeat center / 70px 70px;
+            }
+        }
+    }
+}
+
+}
+.description {
+    margin-left: 49%;
+    margin-bottom: 14px;
+    padding-left: 30px;
+
+    .all_link {
+        margin-top: 7px;
+        margin-left: 30px;
+    }
+
+    h1 {
+        margin-bottom: 30px;
+    }
+
+    .row, .text {
+        position: relative;
+        padding: 0px 0 0px 10px;
+        overflow: hidden;
+        line-height: 24px;
+        
+        &:before {
+            content: '';
+            width: 20px;
+            height: 20px;
+            background-image: url(images/icon_li.svg);
+            background-repeat: no-repeat;
+            position: absolute;
+            left: 0;
+            top: 6px;
+        }
+    }
+
+    .row {
+        display: flex;
+        margin-bottom: 20px;
+        strong {
+            max-width: 175px;
+            min-width: 175px;
+        }
+
+        p {
+            margin-bottom: 0;
+        }
+    }
+    .text {
+        margin-bottom: 39px;
+        strong {
+            display: block;
+            margin-bottom: 10px;
+        }
+    }
+}
+
+
 
 @media screen and (max-width: 1500px) {
     
