--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -12,7 +12,7 @@
 @import 'partners';
 @import 'forms';
 @import 'footer';
-// @import 'campaigns';
+@import 'our_work';
  @import 'content';
 // @import 'gallery';
 // @import 'news';
