--- a/css/scss/_directions.scss
+++ b/css/scss/_directions.scss
@@ -185,6 +185,14 @@
 
 }
 
+.directions_slider {
+    padding-bottom: 50px;
+
+    &.directions {
+        margin-bottom: 102px;
+    }
+}
+
 @media screen and (max-width: 1500px) {
     
 }
