--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -153,7 +153,7 @@ footer {
 		}
 
 		&.tel::before {
-			background-image: url(images/icon_tel.svg);
+			background-image: url(images/icon_tel.png);
 		}
 		&.email::before {
 			background-image: url(images/icon_email.svg);
