--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -7,6 +7,7 @@
 #header {
     width: 100%;
 	position: relative; //fixed;
+	margin-bottom: 30px;
 	top: 0;
 	left: 0;
     z-index: 3;
@@ -67,7 +68,7 @@
 			vertical-align: middle;
 			margin-bottom: 4px;
 			margin-right: 10px;
-			background: url(images/icon_tel.svg) no-repeat center / 100%;
+			background: url(images/icon_tel.png) no-repeat center / 100%;
 		}
 	}
 
