--- a/css/scss/content.scss
+++ b/css/scss/content.scss
@@ -1,5 +1,7 @@
 .breadcrumbs{
-    margin: 30px 0 60px;
+    margin: 0px 0 60px;
+    font-size: 14px;
+    line-height: 16px;
     li{
         display: inline-block;
 
